--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "android/src/main/",
     "android/build.gradle",
     "dist/",
+    "ios/Plugin/",
     "ios/Sources",
     "ios/Tests",
     "Package.swift",
@@ -27,7 +28,12 @@
   "keywords": [
     "capacitor",
     "plugin",
-    "native"
+    "native",
+    "swipe",
+    "back",
+    "gesture",
+    "ios",
+    "android"
   ],
   "scripts": {
     "verify": "npm run verify:ios && npm run verify:android && npm run verify:web",
@@ -76,5 +82,8 @@
     "android": {
       "src": "android"
     }
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
